Add background music functionality

--- a/src/main.html
+++ b/src/main.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Battleship</title>
 </head>
-<body>
+<body id="body">
   <nav>
     <img src="./assets/images/logo.png" alt="NecoShip Logo" class="logo">
     <button id="settingsButton" class="settingsButton" type="button"><span class="settingsLogo"></span></button>
@@ -31,6 +31,6 @@
     </div>
   
   </section>
-
+ 
 </body>
 </html>
